# packet_analyzer

./: .gitignore  README.md  live_scan.jsonl  packet_analyzer.py  pcap_to_json.py  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: anchor.md
.sisyphus/plans/: enhancement-plan.md
packet_analyzer/: __init__.py  analyzer.py  cli.py  compare.py  detections.py  formats.py  live.py  live_engine.py  live_scan.jsonl  pcapng.py  protocols.py  utils.py
tests/: test_analyzer.py  test_compare.py  test_detections.py  test_live.py  test_live_engine.py  test_pcapng.py  test_protocols.py
