[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "packet-analyzer"
version = "0.1.0"
description = "PCAP parser and AI-ready network analysis exporter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]
live = ["scapy"]

[project.scripts]
packet-analyzer = "packet_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packet_analyzer*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
